# WebResearcher

./: .env.example  .gitignore  Dockerfile  README.md  README_EN.md  main.py  pyproject.toml  requirements.txt
docs/: WebWeaver_README.md
examples/: README.md  batch_research.py  python_interpreter_example.py  react_agent_usage.py  webresearcher_usage.py
scripts/: start_webui.sh
tests/: test_webweaver.py
webresearcher/: __init__.py  base.py  config.py  log.py  prompt.py  react_agent.py  tool_planner_file.py  tool_planner_python.py  tool_planner_scholar.py  tool_planner_search.py  tool_python.py  tool_scholar.py  tool_search.py  tool_visit.py  tts_agent.py  web_researcher_agent.py  web_weaver_agent.py
webresearcher/file_tools/: video_analysis.py
webui/: .gitignore  README.md  __init__.py  app.py  requirements.txt
webui/api/: __init__.py  models.py  routes.py  session_manager.py
webui/config/: __init__.py  settings.py
webui/static/: app.js  index.html
